Fixing spacing and placement

--- a/src/styles.css
+++ b/src/styles.css
@@ -358,7 +358,7 @@ main {
   height: 410px;
   padding: 5px;
   padding-top: 0px;
-  margin-top: -140px;
+  margin-top: -50px;
   margin-bottom: 0.25rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -494,7 +494,7 @@ input[type=submit] {
 }
 
 .yearLogoLabel {
-  width: 15.5%;
+  width: 15.75%;
   display:flex;
   flex-direction: column;
   align-items: center;
